2005-07-08  Keith Packard  <keithp@keithp.com>

	* .cvsignore:
	* include/.cvsignore:
	* include/X11/.cvsignore:
	* man/.cvsignore:
	* src/.cvsignore:
	* util/.cvsignore:
	Add .cvsignore files

2005-06-10  Alexander Gottwald  <ago at freedesktop dot org>

	* src/Makefile.am:
	Add -no-undefined to linker command to build shared library on cygwin too
 
2005-06-10  Alexander Gottwald  <ago at freedesktop dot org>

	* Makefile.am:
	ensure $(buildir)/src and $(builddir)/include/X11 exist before installing
	generated files there

2005-05-24  Alexander Gottwald  <ago at freedesktop dot org>

	* Makefile.am:
	separation of source and build directories

2005-05-22  Alan Coopersmith  <alan.coopersmith@sun.com>

	* man/Makefile.am: Convert man pages to long file names

2005-05-21  Alan Coopersmith  <alan.coopersmith@sun.com>

	* configure.ac: Check for <alloca.h> and define INCLUDE_ALLOCA_H
	if found, since <Xalloca.h> requires it.

2005-05-21  Alan Coopersmith  <alan.coopersmith@sun.com>

	* Makefile.am ($(BUILT_FILES)): Use $(install_sh_DATA) instead of
	"install" for better portability.  Remove duplicate installation lines.

	* src/Makefile.am: Add AM_CFLAGS to pass through XT_CFLAGS & X11_CFLAGS

2005-05-18    <ssp@aware-of-vacuity.boston.redhat.com>

	* src/Makefile.am (INCLUDES): Also include include/X11

