@@ -71,3 +71,29 @@ DISTCLEANFILES = StringDefs.c
 libXt_la_LIBADD = @XT_LIBS@
 
 libXt_la_LDFLAGS = -version-number 6:0:0 -no-undefined
+
+#
+# The util directory contains a program that builds some of the sources. 
+# The input to this program is given in files. Unfortunately those input
+# files refers to things like
+# 
+# 	util/foo
+# 
+# so the generating program must be run from the top directory.
+# 
+
+BUILT_SOURCE = StringDefs.c 
+BUILT_HEADER = $(top_builddir)/include/X11/StringDefs.h $(top_builddir)/include/X11/Shell.h
+
+STRING_LIST = $(top_srcdir)/util/string.list
+
+all-local: $(BUILT_FILES)
+
+$(BUILT_HEADER): $(BUILT_SOURCE)
+
+$(BUILT_SOURCE):
+	$(top_builddir)/util/makestrs -i $(top_srcdir) $(STRINGSABIOPTIONS) < $(STRING_LIST) > StringDefs.c
+	$(install_sh_DATA) -d $(top_builddir)/src $(top_builddir)/include/X11
+	$(install_sh_DATA) StringDefs.h $(top_builddir)/include/X11/
+	$(install_sh_DATA) Shell.h $(top_builddir)/include/X11/
+	rm StringDefs.h Shell.h
